[workspace]
members = ["utils", "recipe", "template", "process"]

[workspace.package]
description = "A CLI tool built for creating Containerfile templates for ostree based atomic distros"
edition = "2024"
repository = "https://github.com/blue-build/cli"
license = "Apache-2.0"
categories = ["command-line-utilities"]
version = "0.9.30"

[workspace.dependencies]
bon = "3.8.2"
cached = { version = "0.56.0", features = ["async"]}
chrono = "0.4.42"
clap = "4.5.54"
colored = "3.1.1"
comlexr = "1.4.2"
indexmap = { version = "2.13.0", features = ["serde"] }
indicatif = { version = "0.18.2", features = ["improved_unicode", "rayon"] }
lazy-regex = "3.5.1"
log = "0.4.29"
miette = "7.6.0"
nix = { version = "0.30.1" }
oci-client = { version = "0.15.0", default-features = false }
pretty_assertions = "1.4.1"
rayon = "1.11.0"
regex = "1.12.2"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls"] }
rstest = "0.26.1"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = { version = "0.10.0", package = "serde_yaml_ng" }
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread"] }
uuid = { version = "1.19.0", features = ["v4"] }
which = "8.0.0"
zeroize = { version = "1.8.2", features = ["aarch64", "derive", "std", "serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
correctness = "deny"
suspicious = "deny"
perf = "deny"
style = "deny"
nursery = "deny"
pedantic = "deny"
module_name_repetitions = { level = "allow", priority = 1 }
doc_markdown = { level = "allow", priority = 1 }

[package]
name = "blue-build"
build = "build.rs"

version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.release]
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
pre-release-replacements = [
  { file = "install.sh", search = "VERSION=v\\d+\\.\\d+\\.\\d+", replace = "VERSION=v{{version}}" },
  { file = "flake.nix", search = "version = \"v\\d+\\.\\d+\\.\\d+\";", replace = "version = \"v{{version}}\";" }
]

[dependencies]
blue-build-recipe = { version = "=0.9.30", path = "./recipe" }
blue-build-template = { version = "=0.9.30", path = "./template" }
blue-build-utils = { version = "=0.9.30", path = "./utils" }
blue-build-process-management = { version = "=0.9.30", path = "./process" }
clap-verbosity-flag = "3.0.4"
clap_complete = "4.5.59"
clap_complete_nushell = "4.5.9"
fuzzy-matcher = "0.3.7"
jsonschema = "0.30.0"
open = "5.3.2"
os_info = "3.12.0"
requestty = { version = "0.6.1", features = ["macros", "termion"] }
rust-embed = { version = "8.7.2", features = ["debug-embed", "compression", "deterministic-timestamps"] }
shadow-rs = { version = "1.4.0", default-features = false }
thiserror = "2.0.17"
urlencoding = "2.1.3"
yaml-rust2 = "0.10.4"

cached.workspace = true
clap = { workspace = true, features = ["derive", "cargo", "unicode", "env"] }
colored.workspace = true
comlexr.workspace = true
indexmap.workspace = true
indicatif.workspace = true
log.workspace = true
miette = { workspace = true, features = ["fancy"] }
oci-client.workspace = true
rayon.workspace = true
regex.workspace = true
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
syntect.workspace = true
tempfile.workspace = true
tokio.workspace = true
bon.workspace = true

[features]
# Top level features
default = []

v0_10_0 = [
  "bootc"
]
bootc = ["blue-build-process-management/bootc"]
vendored-libgit2 = ["dep:git2", "git2/vendored-libgit2"]

[dev-dependencies]
rusty-hook = "0.11"

rstest.workspace = true

[build-dependencies]
git2 = { version = "0.20.0", default-features = false, optional = true }
shadow-rs = { version = "1.4.0" }

[lints]
workspace = true

[profile.release]
lto = true
codegen-units = 1
strip = "none"
debug = false
panic = "abort"

[profile.dev]
debug = false

[profile.test]
debug = "line-tables-only"
