[package]
name = "blue-build-process-management"
description.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
version.workspace = true

[lib]
path = "process.rs"

[dependencies]
anyhow = "1"
blue-build-utils = { version = "=0.9.6", path = "../utils" }
indicatif-log-bridge = "0.2"
log4rs = { version = "1", features = ["background_rotation"] }
nu-ansi-term = { version = "0.50", features = ["gnu_legacy"] }
once_cell = "1"
os_pipe = { version = "1", features = ["io_safety"] }
rand = "0.9"
signal-hook = { version = "0.3", features = ["extended-siginfo"] }
sigstore = { version = "0.10", features = ["full-rustls-tls", "cached-client", "sigstore-trust-root", "sign"], default-features = false, optional = true }
zeroize = { version = "1", features = ["aarch64", "derive", "serde"] }

cached.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
colored.workspace = true
comlexr.workspace = true
indicatif.workspace = true
indexmap.workspace = true
log.workspace = true
miette.workspace = true
nix = { workspace = true, features = ["signal", "user"] }
oci-distribution.workspace = true
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, optional = true }
bon.workspace = true
users.workspace = true
uuid.workspace = true

[dev-dependencies]
rstest.workspace = true
blue-build-utils = { version = "=0.9.6", path = "../utils", features = ["test"]  }

[lints]
workspace = true

[features]
sigstore = ["dep:tokio", "dep:sigstore"]
validate = ["dep:tokio"]
prune = []
rechunk = []
