[package]
name = "blue-build-process-management"
description.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
version.workspace = true

[lib]
path = "process.rs"

[dependencies]
anyhow = "1"
blue-build-utils = { version = "=0.9.24", path = "../utils" }
indicatif-log-bridge = "0.2"
log4rs = { version = "1", features = ["background_rotation"] }
nu-ansi-term = { version = "0.50", features = ["gnu_legacy"] }
os_pipe = { version = "1", features = ["io_safety"] }
rand = "0.9"
signal-hook = { version = "0.3", features = ["extended-siginfo"] }
sigstore = { version = "0.11", features = ["full-rustls-tls", "cached-client", "sigstore-trust-root", "sign"], default-features = false }

cached.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
colored.workspace = true
comlexr.workspace = true
indicatif.workspace = true
indexmap.workspace = true
lazy-regex.workspace = true
log.workspace = true
miette.workspace = true
nix = { workspace = true, features = ["signal"] }
oci-distribution.workspace = true
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
bon.workspace = true
users.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
blue-build-utils = { version = "=0.9.24", path = "../utils", features = ["test"]  }

[lints]
workspace = true

[features]
bootc = []
