[package]
name = "blue-build-process-management"
description.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
version.workspace = true

[lib]
path = "process.rs"

[dependencies]
anyhow = "1.0.102"
blue-build-utils = { version = "=0.9.35", path = "../utils" }
indicatif-log-bridge = "0.2.3"
log4rs = { version = "1.4.0", features = ["background_rotation"] }
nu-ansi-term = { version = "0.50.3", features = ["gnu_legacy"] }
signal-hook = { version = "0.4.4", features = ["extended-siginfo"] }
sigstore = { version = "0.13.0", features = ["rustls-tls", "cached-client", "sigstore-trust-root", "sign", "cosign"], default-features = false }

bon.workspace = true
cached.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
colored.workspace = true
comlexr.workspace = true
indicatif.workspace = true
lazy-regex.workspace = true
log.workspace = true
miette.workspace = true
nix = { workspace = true, features = ["signal"] }
rayon.workspace = true
oci-client.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
uuid.workspace = true
which.workspace = true
zeroize.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
blue-build-utils = { version = "=0.9.35", path = "../utils", features = ["test"]  }

[lints]
workspace = true

[features]
bootc = []
