[package]
name = "blue-build-recipe"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blue-build-utils = { version = "=0.8.6", path = "../utils" }
chrono = "0.4"
indexmap = { version = "2", features = ["serde"] }

anyhow.workspace = true
log.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
typed-builder.workspace = true

[lints]
workspace = true
