[package]
name = "blue-build-recipe"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blue-build-utils = { version = "=0.9.24", path = "../utils" }

cached.workspace = true
colored.workspace = true
log.workspace = true
miette.workspace = true
oci-distribution.workspace = true
indexmap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
bon.workspace = true

[lints]
workspace = true
