[package]
name = "blue-build-template"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.14.0", features = ["serde_json"] }
blue-build-recipe = { version = "=0.9.24", path = "../recipe" }
blue-build-utils = { version = "=0.9.24", path = "../utils" }

bon.workspace = true
colored.workspace = true
log.workspace = true
oci-distribution.workspace = true
uuid.workspace = true

[lints]
workspace = true
