[package]
name = "blue-build-utils"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
base64 = "0.22"
blake2 = "0.10"
constcat = "0.5"
directories = "6"
docker_credential = "1"
format_serde_error = "0.3"
process_control = { version = "4", features = ["crossbeam-channel"] }
which = "7"

chrono.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
comlexr.workspace = true
log.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
syntect.workspace = true
bon.workspace = true

[build-dependencies]
syntect = "5"

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true

[features]
test = []
