[package]
name = "blue-build-utils"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
base64 = "0.22"
blake2 = "0.10"
constcat = "0.6"
directories = "6"
docker_credential = "1"
format_serde_error = "0.3"
lenient_semver = "0.4"
process_control = { version = "4", features = ["crossbeam-channel"] }
which = "8"

bon.workspace = true
cached.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
comlexr.workspace = true
log.workspace = true
miette.workspace = true
nix = { workspace = true, features = ["user"] }
semver = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
syntect.workspace = true
tempfile.workspace = true
uuid.workspace = true
zeroize.workspace = true

[build-dependencies]
syntect.workspace = true

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true

[features]
test = []
